[package]
name = "bevy_sprite_tilemap"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "tilemap", "graphics", "2d", "sprites"]
categories = ["game-development"]
repository = "https://github.com/ickshonpe/bevy_sprite_tilemap"
description = "draw tilemaps with bevy sprites"

[dependencies.bevy]
version = "0.9"
default-features = false
features = ["render", "bevy_asset"]

[dependencies.copyless]
version = "0.1.5"

[dev-dependencies]
bevy = "0.9"